test: remove ALL-UNNAMED opens from test config